--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "w-data-csv",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "main": "dist/w-data-csv.umd.js",
   "dependencies": {
     "csv-parser": "^3.0.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "strip-bom-stream": "^5.0.0",
     "wsemi": "^1.7.47"
   },
