--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "w-data-csv",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "main": "dist/w-data-csv.umd.js",
   "dependencies": {
     "csv-parser": "^3.0.0",
     "lodash-es": "^4.17.21",
     "strip-bom-stream": "^5.0.0",
-    "wsemi": "^1.7.49"
+    "wsemi": "^1.7.51"
   },
   "devDependencies": {
     "w-package-tools": "^1.0.75"
   },
   "scripts": {
-    "test": "mocha --parallel --timeout 60000 --experimental-modules --es-module-specifier-resolution=node",
+    "test": "mocha --parallel --timeout 60000 --experimental-modules",
     "deploy": "gh-pages -d docs"
   },
   "repository": {
