--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "w-data-csv",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "main": "dist/w-data-csv.umd.js",
   "dependencies": {
-    "csv-parser": "^3.0.0",
+    "csv-parser": "^3.2.0",
     "lodash-es": "^4.17.21",
     "strip-bom-stream": "^5.0.0",
-    "wsemi": "^1.7.58"
+    "wsemi": "^1.7.89"
   },
   "devDependencies": {
-    "w-package-tools": "^1.0.75"
+    "w-package-tools": "^1.0.87"
   },
   "scripts": {
-    "test": "mocha --parallel --timeout 60000 --experimental-modules",
+    "test": "mocha --parallel --timeout 60000",
     "deploy": "gh-pages -d docs"
   },
   "repository": {
